lcb: Implemented rendering